// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList renders with custom margins 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding-left: 16px;
  padding-right: 16px;
  border-style: solid;
  border-width: 2px;
  border-color: #e4e4e4;
  background-color: #fafafa;
  color: #777777;
  height: 32px;
  line-height: calc(32px - 2px * 2);
  border-radius: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  border-color: #cccccc;
  background-color: #F6FBFF;
  color: #2e2e2e;
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url1.com"
      >
        first label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url2.com"
      >
        second label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url3.com"
      >
        third label
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders with custom size and shape 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding-left: 16px;
  padding-right: 16px;
  border-style: solid;
  border-width: 2px;
  border-color: #e4e4e4;
  background-color: #fafafa;
  color: #777777;
  height: 40px;
  line-height: calc(40px - 2px * 2);
  border-radius: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  border-color: #cccccc;
  background-color: #F6FBFF;
  color: #2e2e2e;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url1.com"
      >
        first label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url2.com"
      >
        second label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url3.com"
      >
        third label
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding-left: 16px;
  padding-right: 16px;
  border-style: solid;
  border-width: 2px;
  border-color: #e4e4e4;
  background-color: #fafafa;
  color: #777777;
  height: 32px;
  line-height: calc(32px - 2px * 2);
  border-radius: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  border-color: #cccccc;
  background-color: #F6FBFF;
  color: #2e2e2e;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url1.com"
      >
        first label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url2.com"
      >
        second label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url3.com"
      >
        third label
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
